--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whack A Mole</title>
 
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
@@ -38,7 +38,7 @@
         </div>
     </div>
 
-    <script src="../JS/script.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 
 </html>
